<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <EditText
        android:id="@+id/create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_name_edit_text"/>

    <EditText
        android:id="@+id/create_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_email_edit_text"/>

    <EditText
        android:id="@+id/create_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/create_password_edit_text"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        />
    <Button
        android:id="@+id/clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_button"
        android:onClick="clear"
        />

</LinearLayout>